# futuristic-emerald-isle

./: CMakeLists.txt  README.md
shaders/: fragment_shader.glsl  light_fragment_shader.glsl  light_vertex_shader.glsl  vertex_shader.glsl
src/: camera.cpp  camera.h  main.cpp  model.h  shader.cpp  shader.h
